--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@types/react": "^16.14.3",
     "@types/react-dom": "^16.9.10",
     "bootstrap": "^4.6.0",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
@@ -52,5 +54,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/jquery": "^3.5.5"
   }
 }
