--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^12.19.16",
     "@types/react": "^16.14.3",
     "@types/react-dom": "^16.9.10",
+    "animate.css": "^4.1.1",
     "bootstrap": "^4.6.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
@@ -21,6 +22,7 @@
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
     "react-paystack": "^3.0.3",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "typescript": "^4.1.3",
